a2/css/style.css
/********** Base styles **********/
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

body {
  margin: 20px;
}

h1 {
  color: black;
  text-align: center;
  font-size: 1.75em;
  margin: 10px;
  margin-bottom: 20px;
}

.row {
  width: 100%;
}

section {
  border: 1px solid black; /* is inherited by the section title: <h2> */
  background-color: #94817e; /* is inherited by dummy text: <p> */
  position: relative;
  margin: 10px;
}

h2 {
  border: inherit;
  text-align: center;
  font-size: 1.25em;

  width: 150px;
  height: 26px;
  margin: 0px;
  position: absolute;
  top: 0px;
  right: 0px;
}

#menu-item-1 { color: black; background-color: #ff946a; }
#menu-item-2 { color: black; background-color: #ffa4a1; }
#menu-item-3 { color: white; background-color: #63331f; }

p {
  color: black;
  background-color: inherit;
  width: auto;
  height: 150px;
  color: black;
  margin-left: 15px;
  margin-top: 35px;
  margin-bottom: 15;
}

/********** Large devices only **********/
@media (min-width: 992px) {
  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
    float: left;
  }
  .col-lg-1 {
    width: 8.33%;
  }
  .col-lg-2 {
    width: 16.66%;
  }
  .col-lg-3 {
    width: 25%;
  }
  .col-lg-4 {
    width: 33.33%;
  }
  .col-lg-5 {
    width: 41.66%;
  }
  .col-lg-6 {
    width: 50%;
  }
  .col-lg-7 {
    width: 58.33%;
  }
  .col-lg-8 {
    width: 66.66%;
  }
  .col-lg-9 {
    width: 74.99%;
  }
  .col-lg-10 {
    width: 83.33%;
  }
  .col-lg-11 {
    width: 91.66%;
  }
  .col-lg-12 {
    width: 100%;
  }
}

/********** Medium devices only **********/
@media (min-width: 768px) and (max-width: 991px) {
  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
    float: left;
  }
  .col-md-1 {
    width: 8.33%;
  }
  .col-md-2 {
    width: 16.66%;
  }
  .col-md-3 {
    width: 25%;
  }
  .col-md-4 {
    width: 33.33%;
  }
  .col-md-5 {
    width: 41.66%;
  }
  .col-md-6 {
    width: 50%;
  }
  .col-md-7 {
    width: 58.33%;
  }
  .col-md-8 {
    width: 66.66%;
  }
  .col-md-9 {
    width: 74.99%;
  }
  .col-md-10 {
    width: 83.33%;
  }
  .col-md-11 {
    width: 91.66%;
  }
  .col-md-12 {
    width: 100%;
  }
}

